<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_border_textview"
        android:textColor="@color/colorBlue"
        android:padding="16dp"
        android:textSize="18sp"
        android:gravity="center"
        android:hint="@string/username"
        android:layout_above="@+id/etPassword"
        android:inputType="textCapWords"
        android:textColorHint="@color/colorBlue"
        android:layout_margin="22dp"
        android:layout_centerVertical="true"
         />
    <EditText
        android:textColorHint="@color/colorBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_border_textview"
        android:textColor="@color/colorBlue"
        android:padding="16dp"
        android:gravity="center"
        android:layout_marginBottom="96dp"
        android:textSize="18sp"
        android:layout_above="@+id/btnLogIn"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:id="@+id/etPassword" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rounded_button"
        android:textColor="@android:color/white"
        android:padding="16dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_margin="22dp"
        android:text="@string/login"/>
</RelativeLayout>