<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="loginViewModel"
            type="com.domainname.android.otpgenerator.viewmodel.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Benvenuto Marco!"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:visibility="invisible" />


        <Button
            android:id="@+id/btnAccedi_ai_servizi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnGenerateOTP"
            android:layout_margin="22dp"
            android:background="@color/colorBlue"
            android:onClick="@{loginViewModel::generateOTP}"
            android:padding="16dp"
            android:text="@string/accedi_ai_servizi"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnGenerateOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnLogout"
            android:layout_marginBottom="96dp"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="22dp"
            android:background="@color/colorBlue"
            android:gravity="center"
            android:onClick="@{loginViewModel::generateOTP}"
            android:padding="16dp"
            android:text="@string/generaotp"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="22dp"
            android:background="@drawable/shape_rounded_button"
            android:gravity="center"
            android:onClick="@{loginViewModel::logout}"
            android:padding="16dp"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:visibility="invisible" />
    </RelativeLayout>
</layout>